# aliurl

./: .gitignore  Cargo.toml  README.md  Rocket.toml  redirect.html.example  tea.yaml
src/: main.rs  post.rs
