[package]
name = "aliurl"
version = "0.3.2"
edition = "2021"
license = "MIT"
repository = "https://github.com/ivabus/aliurl"
description = "Small aliaser for URLs"


[dependencies]
rocket = "0.5.0-rc.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
url-escape = "0.1.1"
rand = "0.8.5"